syntax = "proto3";

package message;

option go_package = "github.com/ISSuh/sos/domain/model/message";

import "google/protobuf/timestamp.proto";
import "object_id.proto";
import "block_id.proto";

message BlockHeader {
    ObjectID objectID = 1;
    BlockID blockID = 2;
    int32 index = 3;
    int32 size = 4;
    string node = 5;
    uint32 checksum = 7;
    google.protobuf.Timestamp timestamp = 6;
}
